<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/margin_big"
    android:layout_marginHorizontal="@dimen/margin_default"
    tools:context=".features.movieDetails.MovieDetailsActivity">

    <LinearLayout
        android:id="@+id/layoutDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/director"
            android:textAllCaps="true"
            android:textColor="@color/text_default"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/text_accent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="David Frankel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/layoutDirector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/duration"
            android:textAllCaps="true"
            android:textColor="@color/text_default"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/text_accent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="2h 10 min" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/layoutDuration">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/release_year"
            android:textAllCaps="true"
            android:textColor="@color/text_default"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/text_accent"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="1995" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutRelease">

        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_default"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/text_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDuration" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_contrast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
            tools:text="Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man." />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>